Fix images position and cropping

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,6 @@ header {
   position: relative;
   width: 100%;
   height: 600px;
-  overflow: hidden;
 }
 
 .hero__logo {
@@ -72,25 +71,19 @@ header {
 .hero__train {
   width: 645px;
   height: 391px;
-  position: relative;
-  top: -80px;
-  left: 50px;
+  max-width: 100%;
+  position: absolute;
+  top: 180px;
+  left: 30px;
   background: url('../images/train-tabletwidth.png') no-repeat 0 0 transparent;
 }
-
-@media (max-width: 600px) {
-  .hero__train {
-    left: -100px;
-  }
-}
-
 
 .hero__tinkertrain {
   width: 161px;
   height: 196px;
   position: absolute;
-  bottom: -20px;
-  right: 20px;
+  bottom: -10px;
+  right: 80px;
   background: url('../images/the-tinkertrain.png') no-repeat 0 0 transparent;
 }
 
@@ -255,6 +248,11 @@ footer p {
 }
 
 @media (max-width: 600px) {
+  .hero__train {
+    left: -120px;
+    max-width: calc(100% + 120px);
+  }
+
   .me,
   .links {
     width: 50%;
